saved to database

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jsonfile": "^6.1.0",
+    "mongodb": "^5.2.0",
     "puppeteer": "^19.8.3"
   }
 }
