--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "dev": "tsc -w & nodemon -q -w dist dist/app.js",
+    "lint": "eslint src --ext .ts",
+    "fix:lint": "eslint src --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -16,11 +18,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "eslint": "^8.37.0",
     "typescript": "^5.0.3"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
     "jsonfile": "^6.1.0",
     "mongodb": "^5.2.0",
     "puppeteer": "^19.8.3"
